src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Inter", sans-serif;
}

html {
  scroll-behavior: smooth;
}

html, body, #root {
  height: 100%;
}

#root {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.app {
  display: flex;
  flex-direction: column;
  flex: 1;
}

main {
  flex: 1;
}

ul {
  display: flex;
}

li {
  list-style-type: none;
}

a {
  text-decoration: none;
}

.blue {
  color: rgb(0, 150, 255);
}

.no-cursor {
  cursor: not-allowed !important;
}

.container {
  height: calc(100vh - 100px);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0 24px;
}

.row {
  width: 100%;
  max-width: 1600px;
  margin: 0 auto;
}

/* NAVIGATION BAR */

.logo {
  width: 160px;
}

.nav__container {
  width: 100%;
  max-width: 1600px;
  height: 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
  padding: 0 24px;
}

.nav__list-item {
  margin: 0 20px;
  font-size: 20px;
  font-weight: 600;
  transition: all 200ms;
  color: rgb(40, 40, 40);
  display: flex;
  align-items: center;
}

.nav__list-item:hover {
  cursor: pointer;
  color: rgb(0, 150, 255);
}

.nav__list-item--text {
  font-size: 16px;
  margin-left: 8px;
}

/* HOME PAGE */

.home__title {
  text-align: center;
  font-size: 48px;
  font-weight: 800;
  color: rgb(40, 40, 40);
  margin-bottom: 8px;
}

.home__subtitle {
  font-weight: 600;
  font-size: 24px;
  margin-bottom: 32px;
}

.home__search-bar {
  position: relative;
  width: 100%;
  max-width: 600px;
  margin-bottom: 64px;
}

.home__search-bar input {
  width: 100%;
  height: 70px;
  font-size: 18px;
  border-radius: 50px;
  border: 2px solid rgb(40, 40, 40);
  padding: 0 56px;
}

.home__search-bar input:focus {
  border: 2px solid rgb(40, 40, 40);
  outline: none;
}

.home__search-bar button {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  border: none;
  background: transparent;
  color: rgb(40, 40, 40);
  transition: all 300ms;
}

.home__search-bar button:hover {
  cursor: pointer;
}

.search__btn {
  font-size: 24px;
  left: 20px;
}

.search__btn:hover {
  color: rgb(0, 150, 255);
}

.clear-search__btn {
  font-size: 28px;
  right: 20px;
}

.clear-search__btn:hover {
  color: rgb(255, 65, 65);
}

.home__img {
  width: 100%;
  max-width: 600px;
}

/* GAMES PAGE */

.games__banner {
  position: relative;
}

.games__banner--img {
  width: 100%;
  height: 100%;
  max-height: 400px;
  filter: blur(1.5px) brightness(60%);
}

.games__banner--container {
  width: 100%;
  max-width: 600px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.games__banner--title {
  color: white;
  font-size: 40px;
  font-weight: 400;
  letter-spacing: 8px;
  margin-bottom: 8px;
}

.games__header--container {
  padding-left: 16px;
  margin-top: 32px;
  margin-bottom: 32px;
}

.games__header--title {
  font-size: 28px;
  color: rgb(40, 40, 40);
}

.games__header--count {
  font-size: 18px;
  color: rgb(40, 40, 40);
}

.games__header--title-skeleton,
.games__header--count-skeleton {
  background-color: rgb(200, 200, 200);
}

.games__header--title-skeleton {
  width: 600px;
  height: 50px;
  border-radius: 10px;
  margin-bottom: 16px;
}

.games__header--count-skeleton {
  width: 200px;
  height: 30px;
  border-radius: 7px;
}

.games__container {
  display: flex;
  flex-wrap: wrap;
  position: relative;
}

.game-card__container {
  position: relative;
  width: 100%;
  flex-grow: 1;
  background-color: rgb(40, 40, 40);
  border-radius: 10px;
  overflow: visible;
  transition: all 300ms ease;
}

.game-card__container:hover {
  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5);
  cursor: pointer;
}

.game-card__container:hover .game__img {
  transform: scale(1.05);
}

.game-card__container--skeleton {
  width: 100%;
  height: 300px;
  background-color: rgb(200, 200, 200);
  border-radius: 10px;
}

.game-card {
  width: calc(100% / 4);
  display: flex;
  flex-direction: column;
  padding: 0 16px 32px 16px;
}

.game__img--wrapper {
  width: 100%;
  height: 200px;
  overflow: hidden;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.game__img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  transition: all 300ms;
}

.game__info--wrapper {
  display: flex;
  justify-content: space-between;
  padding: 16px;
}

.game__title {
  color: white;
  font-size: 20px;
}

.game__release-date {
  color: rgb(200, 200, 200);
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 8px;
}

.game__platforms {
  display: flex;
  align-items: center;
}

.game__platforms svg,
.game__platforms img {
  width: 16px;
  height: 16px;
  color: white;
  margin: 4px 8px 0 8px;
}

.game__platforms svg:first-child {
  margin-left: 0;
}

.nintendo {
  filter: brightness(0) invert(1);
}

.game__score {
  color: rgb(200, 200, 200);
  background-color: rgb(40, 40, 40);
  font-size: 28px;
  border: 2px solid rgb(200, 200, 200);
  border-radius: 50%;
  position: absolute;
  top: 8px;
  right: 8px;
  padding: 10px 8px 8px 8px;
  width: 60px;
  height: 60px;
  text-align: center;
}

.no-results__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.no-results__text {
  font-size: 20px;
  font-weight: 500;
  margin: 16px 0 32px 0;
}

.no-results__img {
  width: 100%;
  max-width: 500px;
  margin-bottom: 48px;
}

.btn__container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin-bottom: 32px;
}

.btn {
  border: none;
  background-color: rgb(200, 200, 200);
  font-size: 18px;
  font-weight: 600;
  color: rgb(40, 40, 40);
  transition: all 300ms;
  padding: 8px 16px;
  border-radius: 10px;
}

.btn:hover {
  background-color: rgb(40, 40, 40);
  color: white;
  cursor: pointer;
}

.prev__btn {
  margin-left: 16px;
}

.next__btn {
  margin-right: 16px;
}

.prev__btn:disabled,
.next__btn:disabled {
  background-color: rgb(200, 200, 200);
  color: rgb(120, 120, 120);
  cursor: default;
}

.fa-chevron-left {
  margin-right: 8px;
}

.fa-chevron-right {
  margin-left: 8px;
}

/* GAME INFO PAGE */

.back__btn {
  background: transparent;
  border: none;
  border-radius: 10px;
  font-size: 20px;
  color: rgb(40, 40, 40);
  padding: 8px 16px;
  transition: all 300ms;
}

.back__btn:hover {
  background-color: rgb(200, 200, 200);
  cursor: pointer;
}

.game-info__container {
  display: flex;
}

.game-info__img--container {
  width: 100%;
  max-width: 400px;
  height: 600px;
  border-radius: 10px;
  overflow: hidden;
  position: relative;
}

.game-info__img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.esrb-rating {
  position: absolute;
  bottom: 8px;
  left: 12px;
}

.game-info__wrapper {
  margin-left: 64px;
  width: 100%;
}

.game-info__title {
  font-weight: 900;
  font-size: 48px;
  color:rgb(40, 40, 40);
  margin-bottom: 32px;
}

.release-date__label,
.developer__label,
.publisher__label,
.platforms__label,
.playtime__label,
.achievements__label,
.rating__label,
.genres__label,
.tags__label {
  color:rgb(100, 100, 100);
  font-size: 14px;
  font-weight: 400;
}

.game-info__row-1 {
  display: flex;
  margin-bottom: 32px;
}

.developer__container {
  padding: 0 72px;
}

.release-date,
.developers,
.publishers,
.platforms,
.description {
  color:rgb(40, 40, 40);
  font-size: 16px;
}

.release-date,
.developers,
.publishers,
.playtime,
.achievements,
.rating,
.platforms {
  font-weight: 600;
}

.playtime,
.achievements,
.rating {
  font-size: 20px;
}

.game-info__row-2 {
  display: flex;
  margin-bottom: 32px;
}

.playtime__container,
.achievements__container,
.rating__container {
  display: flex;
  align-items: center;
}

.achievements__container {
  padding: 0 72px;
}

.playtime__icon,
.achievements__icon,
.rating__icon {
  margin-right: 8px;
  font-size: 20px;
  color: rgb(40, 40, 40);
}

.description__container {
  margin-bottom: 48px;
}

.genres__label,
.tags__label {
  margin-bottom: 4px;
}

.genres, .tags, .platforms {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 32px;
}

.genre, .tag {
  color:rgb(40, 40, 40);
  background-color: rgb(230, 230, 230);
  border-radius: 5px;
  padding: 4px 8px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  font-weight: 500;
}

.game-info__img--container--skeleton {
  background-color: rgb(200, 200, 200);
}

.game-info__title--skeleton {
  background-color:rgb(200, 200, 200);
  width: 100%;
  max-width: 800px;
  height: 60px;
  border-radius: 10px;
  margin-bottom: 32px;
}

.game-info__labels--skeleton {
  width: 100%;
  max-width: 800px;
  display: flex;
  justify-content: space-between;
}

.game-info__label--skeleton--hidden {
  visibility: hidden;
}

.game-info__label--skeleton,
.game-info__label--skeleton--hidden {
  background-color:rgb(200, 200, 200);
  width: 100%;
  max-width: 100px;
  height: 15px;
  border-radius: 5px;
  margin-bottom: 4px;
}

.release-date-label__skeleton {
  max-width: 130px;
}

.genres-label__skeleton {
  max-width: 70px;
}

.tags-label__skeleton {
  max-width: 50px;
}

.game-info__row-1--skeleton {
  background-color:rgb(200, 200, 200);
  width: 100%;
  max-width: 700px;
  height: 40px;
  border-radius: 10px;
  margin-bottom: 32px;
}

.game-info__row-2--skeleton {
  background-color:rgb(200, 200, 200);
  width: 100%;
  max-width: 500px;
  height: 30px;
  border-radius: 10px;
  margin-bottom: 32px;
}

.game-info__row-3--skeleton {
  background-color:rgb(200, 200, 200);
  width: 100%;
  max-width: 600px;
  height: 40px;
  border-radius: 10px;
  margin-bottom: 32px;
}

.description__container--skeleton {
  background-color:rgb(200, 200, 200);
  width: 100%;
  height: 200px;
  border-radius: 10px;
  margin-bottom: 48px;
}

.genres__container--skeleton {
  margin-bottom: 32px;
}

.genres__container--skeleton,
.tags__container--skeleton {
  background-color:rgb(200, 200, 200);
  width: 100%;
  height: 50px;
  border-radius: 10px;
}

/* FOOTER */

footer {
  background-color: rgb(40, 40, 40);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.footer__container {
  width: 100%;
  max-width: 1600px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
}

.footer__logo {
  max-width: 180px;
  width: 100%;
  margin-top: 28px;
  padding: 0 16px;
}

.footer__list {
  margin: 20px 0;
}

.footer__list-item {
  color: white;
  text-align: center;
  font-weight: 500;
  margin: 0 16px;
}

.footer__list-item:hover {
  text-decoration: underline;
}

.copyright {
  color: white;
  text-align: center;
  margin-bottom: 28px;
  padding: 0 16px;
}

.socials__list {
  color: white;
  display: flex;
  position: absolute;
  bottom: 16px;
  right: 16px;
}

.socials__icon {
  margin: 0 8px;
  transition: all 300ms;
}

.socials__icon:hover {
  transform: scale(1.25);
  cursor: pointer;
}

